# hellcall

./: .gitignore  Cargo.toml  README.md  build.rs
.serena/: project.yml
src/: config.rs  lib.rs  main.rs
src/core/: audio.rs  command.rs  keypress.rs  mod.rs  speaker.rs
src/core/matcher/: fuzzy.rs  levenshtein.rs
