[package]
name = "hellcall"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/LyceumHewun/hellcall"

[dependencies]
anyhow = "1.0.99"
cpal = "0.16.0"
env_logger = "0.11.8"
log = "0.4.28"
rdev = "0.5.3"
rodio = "0.21.1"
strsim = "0.11.1"
vosk = "0.3.1"
webrtc-vad = "0.4.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
